
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* add @CopeSchemaValue for enum values
* add ItemCacheInfo.getConcurrentLoads()
	replaces message on System.out: warning: duplicate computation of state ...
* add SchemaInfo.quoteName
* remove automatic detection of convert in MediaImageMagickFilter
	now you need a java system property to enable:
		com.exedio.cope.media.imagemagick=true
* console history adds a column for ClusterSenderInfo.getInvalidationSplit()
	requires modification of persistent schema
* MandatoryViolation and FinalViolation for PriceField has PriceField itself as feature, not the source-Field of the PriceField
	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
* MandatoryViolation for Media has Media itself as feature, not the body of the Media
	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
* added Model.containsTypeSet
* move Item.newType to class TypesBound
	deprecated version is provided
* move Type.forClass[Unchecked] to a new class TypesBound
	deprecated version is provided
* renamed Type#isJavaClassExclusive to isBound
	deprecated version is provided
* fix instrumented javadoc after "Type.newItem does not invoke creation constructor anymore"
	(see below), heavily affects instrumented code !
* DynamicModel uses MapField for names
	this affects names of columns and tables in database schema,
	requires a revision
* reorganized creation and activation of items,
	breaks backwards API compatibility
	heavily affects instrumented code !
	- Type.newItem does not invoke creation constructor anymore,
		this breaks preCreate constructs
		use a static method "SetValue[] beforeNewCopeItem(SetValue[])" instead