@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* replace SchemaInfo.getColumnValue(EnumField, Enum) by getColumnValue(Enum)
+	deprecated version is provided
 * add @CopeSchemaValue for enum values
 * add ItemCacheInfo.getConcurrentLoads()
 	replaces message on System.out: warning: duplicate computation of state ...
